--- a/app/src/main/res/layout/activity_pet_care_provider_registeration.xml
+++ b/app/src/main/res/layout/activity_pet_care_provider_registeration.xml
@@ -22,6 +22,7 @@
             android:background="@color/colorAccent"
             android:layout_marginBottom="10dp"
             android:elevation="2dp">
+
             <ImageButton
                 android:id="@+id/uploadPhoto_btn"
                 android:layout_width="110dp"
@@ -30,6 +31,7 @@
                 android:scaleType="centerInside"
                 android:padding="30dp"
                 android:background="?android:attr/selectableItemBackground" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -37,73 +39,74 @@
                 android:layout_marginBottom="5dp"
                 android:text="Upload photo"
                 android:fontFamily="sans-serif-condensed"
-                android:textColor="@color/primaryTextWhite"/>
+                android:textColor="@color/white" />
         </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@color/primaryTextWhite"
+            android:background="@color/white"
             android:elevation="2dp"
             android:padding="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your Bio"
-            android:fontFamily="serif"
-            android:textColor="@color/colorPrimaryDark"/>
-
-        <EditText
-            android:id="@+id/profileTitle_etxt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Profile Title (e.g. Part-time pet sitter)"/>
-
-        <EditText
-            android:id="@+id/profileDescription_etxt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textMultiLine"
-            android:gravity="bottom"
-            android:layout_marginTop="5dp"
-            android:hint="Description: tell a little about yourself and describe your pet care experience and qualifications."
-            android:selectAllOnFocus="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Contact Information"
-            android:textColor="@color/colorPrimaryDark"
-            android:fontFamily="serif"
-            android:layout_marginTop="15dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/phoneNumber_etxt"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:hint="Phone Number"
-                android:inputType="phone"
-                android:selectAllOnFocus="true"/>
-            <Switch
-                android:id="@+id/hidePhone_swch"
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hide it "/>
-        </LinearLayout>
+                android:text="Your Bio"
+                android:fontFamily="serif"
+                android:textColor="@color/colorPrimaryDark" />
+
+            <EditText
+                android:id="@+id/profileTitle_etxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Profile Title (e.g. Part-time pet sitter)" />
+
+            <EditText
+                android:id="@+id/profileDescription_etxt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:gravity="bottom"
+                android:layout_marginTop="5dp"
+                android:hint="Description: tell a little about yourself and describe your pet care experience and qualifications."
+                android:selectAllOnFocus="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Contact Information"
+                android:textColor="@color/colorPrimaryDark"
+                android:fontFamily="serif"
+                android:layout_marginTop="15dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/phoneNumber_etxt"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:hint="Phone Number"
+                    android:inputType="phone"
+                    android:selectAllOnFocus="true" />
+
+                <Switch
+                    android:id="@+id/hidePhone_swch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hide it " />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@color/primaryTextWhite"
+            android:background="@color/white"
             android:elevation="2dp"
             android:padding="10dp"
             android:layout_marginTop="20dp">
@@ -113,16 +116,18 @@
                 android:layout_height="wrap_content"
                 android:text="Experience and Salary"
                 android:fontFamily="serif"
-                android:textColor="@color/colorPrimaryDark"/>
+                android:textColor="@color/colorPrimaryDark" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Years of experience:"/>
+                    android:text="Years of experience:" />
+
                 <Spinner
                     android:id="@+id/experienceYears_spnr"
                     android:layout_width="0dp"
@@ -130,46 +135,52 @@
                     android:layout_weight="1"
                     android:entries="@array/x_years"
                     android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"/>
+                    android:layout_marginLeft="10dp" />
             </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="$ Average rate/hour:"
-                android:layout_marginTop="15dp"/>
+                android:layout_marginTop="15dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <Spinner
                     android:id="@+id/salaryFrom_spnr"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:entries="@array/salary_range"
                     android:layout_weight="1" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="to:"
                     android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"/>
+                    android:layout_marginEnd="10dp" />
+
                 <Spinner
                     android:id="@+id/salaryTo_spnr"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:entries="@array/salary_range"
                     android:layout_weight="1"
-                    android:gravity="center_horizontal"/>
+                    android:gravity="center_horizontal" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Availability:"/>
+                    android:text="Availability:" />
+
                 <Spinner
                     android:id="@+id/availability_spnr"
                     android:layout_width="0dp"
@@ -177,7 +188,7 @@
                     android:layout_weight="1"
                     android:entries="@array/availability"
                     android:layout_marginStart="10dp"
-                    android:layout_marginLeft="10dp"/>
+                    android:layout_marginLeft="10dp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -185,10 +196,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@color/primaryTextWhite"
+            android:background="@color/white"
             android:elevation="2dp"
             android:padding="10dp"
             android:layout_marginTop="20dp">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -200,12 +212,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Distance you're willing to travel from home:"
                     android:layout_weight="1"
-                    android:ems="10"/>
+                    android:ems="10" />
+
                 <EditText
                     android:id="@+id/travelDistance_etxt"
                     android:layout_width="wrap_content"
@@ -216,60 +230,68 @@
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
                     android:gravity="center"
-                    android:layout_gravity="bottom"/>
+                    android:layout_gravity="bottom" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="km"
                     android:textColor="@color/primaryText"
-                    android:layout_gravity="bottom"/>
+                    android:layout_gravity="bottom" />
             </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="Service provided for:"/>
+                android:text="Service provided for:" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
+
                 <CheckBox
                     android:id="@+id/catService_chk"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Cats"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
+
                 <CheckBox
                     android:id="@+id/dogService_chk"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Dogs"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
+
                 <CheckBox
                     android:id="@+id/farmAnimalService_chk"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Small Animals"
-                    android:layout_weight="1.3"/>
+                    android:layout_weight="1.3" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
+
                 <CheckBox
                     android:id="@+id/horseService_chk"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Horses"/>
+                    android:text="Horses" />
+
                 <CheckBox
                     android:id="@+id/birdService_chk"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Birds"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
+
                 <CheckBox
                     android:id="@+id/fishService_chk"
                     android:layout_width="0dp"
@@ -282,53 +304,60 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Services provided:"/>
+                android:text="Services provided:" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
+
                 <CheckBox
                     android:id="@+id/petSitting_chk"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Pet Sitting"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
+
                 <CheckBox
                     android:id="@+id/petWalking_chk"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Pet Walking"
-                    android:layout_weight="1.1"/>
+                    android:layout_weight="1.1" />
+
                 <CheckBox
                     android:id="@+id/petGrooming_chk"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Grooming"/>
+                    android:text="Grooming" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center">
+
                 <CheckBox
                     android:id="@+id/petTraining_chk"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Training"
                     android:layout_weight="1" />
+
                 <CheckBox
                     android:id="@+id/petVeterinary_chk"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Veterinary"
                     android:layout_weight="1.1" />
+
                 <CheckBox
                     android:id="@+id/petBoarding_chk"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Boarding"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
 
@@ -337,7 +366,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Save"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp" />
 
     </LinearLayout>
 </ScrollView>
