--- a/app/src/main/res/layout/fragment_pet_schedule.xml
+++ b/app/src/main/res/layout/fragment_pet_schedule.xml
@@ -3,19 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
     tools:context="com.ahmedbass.mypetfriend.PetScheduleFragment">
 
     <LinearLayout
+        android:id="@+id/scheduleDate_lout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:background="@color/primaryTextWhite"
+        android:background="@color/white"
         android:paddingTop="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:layout_marginBottom="5dp"
         android:elevation="2dp">
+
         <ImageView
             android:layout_width="30dp"
             android:layout_height="32dp"
@@ -23,7 +24,8 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp" />
+
         <TextView
             android:id="@+id/scheduleDate_txtv"
             android:layout_width="0dp"
@@ -32,7 +34,7 @@
             android:gravity="center_vertical"
             android:text="Activities of Today"
             style="@style/myTextViewStyle.myTitleStyle"
-            android:padding="10dp"/>
+            android:padding="10dp" />
     </LinearLayout>
     <!--color e64a19-->
 
@@ -40,7 +42,7 @@
         android:id="@+id/calendarview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <ListView
         android:id="@+id/activitiesOfDay_listview"
@@ -48,7 +50,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:drawSelectorOnTop="true"/>
+        android:drawSelectorOnTop="true" />
 
     <TextView
         android:id="@+id/emptyList_txtv"
@@ -57,6 +59,6 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:text="No Activities On This Day."
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </LinearLayout>
