--- a/app/src/main/res/drawable-v21/icons_background.xml
+++ b/app/src/main/res/drawable-v21/icons_background.xml
@@ -2,18 +2,18 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/colorAccent">
     <item>
-        <shape android:shape= "rectangle">
-        <solid android:color="@color/colorAccent" />
-        <corners android:radius="10dp" />
-        <gradient
-            android:angle="90"
-            android:startColor="@color/icon_dark"
-            android:endColor="@color/icon_bright"/>
-        <padding
-            android:left="10dp"
-            android:top="10dp"
-            android:right="10dp"
-            android:bottom="10dp"/>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/colorAccent" />
+            <corners android:radius="10dp" />
+            <gradient
+                android:angle="90"
+                android:startColor="@color/colorAccent"
+                android:endColor="@color/nice_red" />
+            <padding
+                android:left="10dp"
+                android:top="10dp"
+                android:right="10dp"
+                android:bottom="10dp" />
         </shape>
     </item>
 </ripple>
