--- a/app/src/main/res/drawable/icons_background.xml
+++ b/app/src/main/res/drawable/icons_background.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape= "rectangle">
+    android:shape="rectangle">
     <solid android:color="@color/colorAccent" />
     <corners android:radius="10dp" />
     <gradient
         android:angle="90"
-        android:startColor="@color/icon_dark"
-        android:endColor="@color/icon_bright"/>
+        android:startColor="@color/colorAccent"
+        android:endColor="@color/nice_red" />
     <padding
         android:left="10dp"
         android:top="10dp"
         android:right="10dp"
-        android:bottom="10dp"/>
+        android:bottom="10dp" />
 </shape>
