--- a/app/src/main/res/drawable/mypets_list_background.xml
+++ b/app/src/main/res/drawable/mypets_list_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape= "rectangle">
+    android:shape="rectangle">
 
     <corners android:radius="10dp" />
 
@@ -8,6 +8,6 @@
         android:angle="90"
         android:startColor="@color/colorAccent"
         android:centerColor="@color/colorAccent"
-        android:endColor="@color/colorAccentLight"/>
+        android:endColor="#856abbf9" />
 
 </shape>
