--- a/app/src/main/res/layout-land/activity_welcome.xml
+++ b/app/src/main/res/layout-land/activity_welcome.xml
@@ -7,8 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ahmedbass.mypetfriend.WelcomeActivity"
-    android:background="@color/primaryTextWhite"
+    tools:context="com.ahmedbass.mypetfriend.LauncherActivity"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <ImageView
@@ -18,7 +18,7 @@
         android:id="@+id/app_logo_img"
         android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:src="@drawable/mypetfriend_logo"/>
+        android:src="@drawable/mypetfriend_logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,7 +35,8 @@
             android:id="@+id/moveToRegister_btn"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:onClick="moveToActivity"/>
+            android:onClick="moveToActivity" />
+
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -44,7 +45,7 @@
             android:id="@+id/moveToLogin_btn"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:onClick="moveToActivity"/>
+            android:onClick="moveToActivity" />
     </LinearLayout>
 
 </LinearLayout>
