--- a/app/src/main/res/layout/activity_pet_care_provider_profile.xml
+++ b/app/src/main/res/layout/activity_pet_care_provider_profile.xml
@@ -17,7 +17,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/primaryTextWhite"
+            android:background="@color/white"
 
             android:padding="2dp"
             android:paddingBottom="@dimen/activity_vertical_margin"
@@ -34,7 +34,7 @@
                 android:padding="2dp"
                 android:cropToPadding="true"
                 android:scaleType="centerCrop"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -48,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:text="Name"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -59,7 +59,7 @@
                     android:scaleX=".9"
                     android:scaleY=".9"
                     android:drawableStart="@drawable/ic_location_on_black_24dp"
-                    android:drawableLeft="@drawable/ic_location_on_black_24dp"/>
+                    android:drawableLeft="@drawable/ic_location_on_black_24dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -67,7 +67,7 @@
                     android:text="Part-Time pet sitter"
                     android:textColor="@color/primaryText"
                     android:layout_marginTop="5dp"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
                     android:text="5 YRS EXP."
                     android:textColor="@color/primaryText"
                     android:layout_marginTop="5dp"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -83,7 +83,7 @@
                     android:text="$10-15 HOURLY RATE"
                     android:textColor="@color/primaryText"
                     android:layout_marginTop="5dp"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -106,12 +106,12 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/primaryTextWhite"
+            android:background="@color/white"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:padding="10dp"
             android:elevation="2dp"
-            android:text="hello everyone, \nI'm a pet sitter, I provider care for dogs and cats. blabla..."/>
+            android:text="hello everyone, \nI'm a pet sitter, I provider care for dogs and cats. blabla..." />
 
         <TextView
             android:layout_width="wrap_content"
@@ -127,7 +127,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/primaryTextWhite"
+            android:background="@color/white"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:padding="8dp"
@@ -135,7 +135,7 @@
             android:drawableStart="@drawable/checkmark"
             android:drawableLeft="@drawable/checkmark"
             android:drawablePadding="6dp"
-            android:elevation="2dp"/>
+            android:elevation="2dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -151,7 +151,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/primaryTextWhite"
+            android:background="@color/white"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:padding="8dp"
@@ -159,7 +159,7 @@
             android:drawableStart="@drawable/checkmark"
             android:drawableLeft="@drawable/checkmark"
             android:drawablePadding="6dp"
-            android:elevation="2dp"/>
+            android:elevation="2dp" />
 
         <ImageView
             android:layout_width="match_parent"
@@ -191,7 +191,8 @@
                 android:numStars="5"
                 android:rating="3"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"/>
+                android:layout_marginEnd="10dp" />
+
             <TextView
                 android:id="@+id/reviews_txtv"
                 android:layout_width="wrap_content"
@@ -207,7 +208,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:layout_margin="10dp"
-            android:background="@color/primaryTextWhite"
+            android:background="@color/white"
             android:orientation="vertical" />
     </LinearLayout>
 </ScrollView>
