--- a/app/src/main/res/layout/activity_pet_profile.xml
+++ b/app/src/main/res/layout/activity_pet_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,8 +22,7 @@
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp"
-            app:title="My Pet Name">
+            app:expandedTitleMarginEnd="64dp">
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -41,20 +39,20 @@
                         android:scaleType="centerCrop"
                         android:fitsSystemWindows="true"
                         android:src="@drawable/pic"
-                        app:layout_collapseMode="parallax"/>
+                        app:layout_collapseMode="parallax" />
                     <com.ahmedbass.mypetfriend.ThreeFourImageView
                         android:id="@+id/petProfilePic_img2"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:scaleType="centerCrop"
                         android:fitsSystemWindows="true"
-                        android:src="@drawable/dog_img"
-                        app:layout_collapseMode="parallax"/>
+                        android:src="@drawable/pic"
+                        app:layout_collapseMode="parallax" />
                 </ViewSwitcher>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/smooth_background_protection"/>
+                    android:background="@drawable/smooth_background_protection" />
             </FrameLayout>
 
             <android.support.v7.widget.Toolbar
@@ -62,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin"/>
+                app:layout_collapseMode="pin" />
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
@@ -93,13 +91,13 @@
             app:tabSelectedTextColor="#FFFFFF"
             app:tabTextColor="#0000FF"
             android:background="@color/colorAccent"
-            android:elevation="4dp"/>
+            android:elevation="4dp" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
