--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -7,8 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ahmedbass.mypetfriend.WelcomeActivity"
-    android:background="@color/primaryTextWhite"
+    tools:context="com.ahmedbass.mypetfriend.LauncherActivity"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <ImageView
@@ -18,7 +18,7 @@
         android:id="@+id/app_logo_img"
         android:layout_gravity="center"
         android:layout_margin="5dp"
-        android:src="@drawable/mypetfriend_logo"/>
+        android:src="@drawable/mypetfriend_logo" />
 
     <Button
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:onClick="moveToActivity"/>
+        android:onClick="moveToActivity" />
 
     <Button
         android:layout_width="match_parent"
@@ -41,5 +41,5 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_gravity="center"
-        android:onClick="moveToActivity"/>
+        android:onClick="moveToActivity" />
 </LinearLayout>
