--- a/app/src/main/res/layout/fragment_pet_info_header.xml
+++ b/app/src/main/res/layout/fragment_pet_info_header.xml
@@ -9,9 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:background="@color/primaryTextWhite"
+        android:background="@color/white"
         android:layout_marginBottom="5dp"
         android:elevation="2dp">
+
         <ImageView
             android:layout_width="32dp"
             android:layout_height="32dp"
@@ -19,7 +20,8 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -27,7 +29,7 @@
             android:gravity="center_vertical"
             android:text="Pet's Info"
             style="@style/myTextViewStyle.myTitleStyle"
-            android:padding="10dp"/>
+            android:padding="10dp" />
     </LinearLayout>
 
     <GridLayout
@@ -52,7 +54,7 @@
             android:textColor="@color/primaryText"
             android:layout_gravity="fill"
             android:gravity="fill_vertical"
-            android:layout_columnWeight="1"/>
+            android:layout_columnWeight="1" />
 
         <TextView
             android:layout_row="2"
@@ -100,7 +102,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:text="Neutered/Spayed:"
+            android:text="Neutered:"
             android:textColor="@color/primaryText"
             android:layout_gravity="fill" />
 
@@ -115,7 +117,7 @@
             android:layout_gravity="fill" />
 
         <TextView
-            android:id="@+id/birthdate_txtv"
+            android:id="@+id/birthDate_txtv"
             android:layout_row="0"
             android:layout_column="1"
             android:layout_width="wrap_content"
@@ -126,7 +128,7 @@
             android:textColor="@color/primaryText"
             android:layout_gravity="fill"
             android:gravity="fill_vertical"
-            android:layout_columnWeight="1"/>
+            android:layout_columnWeight="1" />
 
         <TextView
             android:id="@+id/gender_txtv"
@@ -184,7 +186,7 @@
             android:layout_gravity="fill" />
 
         <TextView
-            android:id="@+id/microchip_txtv"
+            android:id="@+id/microchipNumber_txtv"
             android:layout_row="7"
             android:layout_column="1"
             android:layout_width="wrap_content"
@@ -199,10 +201,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:background="@color/primaryTextWhite"
+        android:background="@color/white"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="5dp"
         android:elevation="2dp">
+
         <ImageView
             android:layout_width="32dp"
             android:layout_height="32dp"
@@ -210,7 +213,8 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp" />
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -218,7 +222,7 @@
             android:gravity="center_vertical"
             android:text="Pet's Timeline"
             style="@style/myTextViewStyle.myTitleStyle"
-            android:padding="10dp"/>
+            android:padding="10dp" />
     </LinearLayout>
 
 </LinearLayout>
