--- a/app/src/main/res/layout/list_item_pet.xml
+++ b/app/src/main/res/layout/list_item_pet.xml
@@ -36,7 +36,7 @@
                 android:text="My Pet Name"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/colorPrimaryDark"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_gravity="center_horizontal" />
 
             <ImageButton
                 android:id="@+id/pet_picture_img"
@@ -50,26 +50,28 @@
                 android:scaleType="centerCrop"
                 android:layout_margin="5dp"
                 android:background="?android:attr/selectableItemBackground"
-                android:contentDescription="profile picture"/>
+                android:contentDescription="profile picture" />
+
             <TextView
                 android:id="@+id/pet_breed_and_type_txtv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="My Pet Breed and Kind"
-                android:textColor="@color/primaryTextWhite"/>
+                android:textColor="@color/white" />
+
             <TextView
                 android:id="@+id/pet_age_txtv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="My Pet Age"
-                android:textColor="@color/primaryTextWhite"/>
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/pet_weight_txtv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="My Pet weight"
-                android:textColor="@color/primaryTextWhite"/>
+                android:textColor="@color/white" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
