--- a/app/src/main/res/layout/list_item_timeline.xml
+++ b/app/src/main/res/layout/list_item_timeline.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -11,6 +13,6 @@
         android:textSize="24sp"
         android:padding="8dp"
         android:gravity="center"
-        android:background="@color/primaryTextWhite"/>
+        android:background="@color/white" />
 
 </LinearLayout>
