--- a/app/src/main/res/menu/mypets_menu.xml
+++ b/app/src/main/res/menu/mypets_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_add"
+        android:id="@+id/action_add_pet"
         android:title="Add new pet"
-        app:showAsAction="never"/>
+        app:showAsAction="never" />
 </menu>
