--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,14 +2,15 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorAccent</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimary</item>
 
         <item name="editTextColor">@color/primaryText</item>
         <item name="android:textViewStyle">@style/myTextViewStyle</item>
         <item name="colorButtonNormal">@color/colorAccent</item>
         <item name="buttonStyle">@style/myButtonStyle</item>
+        <item name="popupMenuStyle">@style/myPopupMenuStyle</item>
     </style>
 
     <style name="myTextViewStyle" parent="@android:style/Widget.TextView">
@@ -23,8 +24,18 @@
     </style>
 
     <style name="myButtonStyle" parent="Base.Widget.AppCompat.Button">
-        <item name="android:textColor">@color/primaryTextWhite</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:padding">20dp</item>
+    </style>
+
+
+    <style name="myPopupMenuStyle" parent="@android:style/Widget.PopupMenu">
+        <item name="android:colorBackground">@color/colorAccent</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="myDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textColor">@color/colorAccent</item>
     </style>
 
     <style name="iconStyle_MainScreen">
